docs/css/ui.css
html, body {
    height: 100%;
    margin: 0px;
}
body {
    display: flex;
    flex-direction: column;
    padding: 8px;
    box-sizing: border-box;
}
header {
    display: flex;
    flex-direction: row;
    column-gap: 15px;
    align-items: center;
    padding-bottom: 6px;
}
header>* {
    flex: 0 0 auto
}
header>div.hfill {
    flex: 1
}
main {
    display: flex;
    align-items: flex-start;
    overflow: hidden;
    flex: 1;
}

div.mdc-data-table {
    width: 100%;
    max-height: 100%;
}
details {
    padding: 2px 0;
    overflow-wrap: break-word;
    white-space: normal;
}
details.title0, details.title1 {
    padding-left: 16px;
}
summary {
    padding: 10px 0;
    cursor: pointer;
    user-select: none;
    color: var(--mdc-theme-primary);
}
details[open]>summary {
    user-select: text;
}
:is(details.title0, details.title1)>summary {
    padding: 0;
    color: var(--mdc-theme-secondary);
    user-select: text;
}
td:nth-child(3) details.title0>summary {
    user-select: none;
}
summary::marker {
    color: var(--mdc-theme-on-surface);
}
summary:focus {
    outline: none;
}
span.si_wrapper {
    display: inline-block;
    padding-right: 1px;
    user-select: none;
    height: 20px;
    vertical-align: bottom;
    overflow-y: hidden;
}
img.es_icon, span.si_frame {
    position: relative;
    height: 20px;
    vertical-align: bottom;
    margin-right: 2px;
}
img.es_icon {
    width: 20px;
    object-fit: cover;
}
img.es_icon.es_icon--crop {
    height: 40px;
}
span.si_frame {
    display: inline-block;
    width: 48px;
    box-sizing: border-box;
    padding-left: 5px;
}
span.si_frame::before {
    content: '';
    display: block;
    position: absolute;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    background: var(--frame-src, black) left center/cover no-repeat;
    -webkit-mask-image: linear-gradient(to right, #000a 0%, #000a 50%, 60%, #000f 100%);
    mask-image: linear-gradient(to right, #000a 0%, #000a 50%, 60%, #000f 100%);
}
table.mdc-data-table__table {
    width: 100%;
    table-layout: fixed;
}
th.mdc-data-table__header-cell {
    font-weight: bold;
}
th.mdc-data-table__header-cell:first-child {
    width: 10%;
}
th.mdc-data-table__header-cell:nth-child(n+2):nth-child(-n+3) {
    width: 45%;
}
td.mdc-data-table__cell:nth-child(2)>details[open]>summary>span {
    display: none
}
td.mdc-data-table__cell:nth-child(2)>details>span.si_wrapper {
    margin-bottom: 5px;
}
td.mdc-data-table__cell:nth-child(3):not(:empty) {
    padding-top: 4px;
    padding-bottom: 4px;
    white-space: normal;
}
div.mdc-data-table__table-container {
    overflow-y: scroll;
}
#info_icon {
    cursor: default;
}
ul {
    margin: 0px;
    padding-left: 1em;
}
ul>li>ul {
    list-style-type: "▸ ";
}
details>table {
    border: 1px solid #777;
    width: auto;
}
details td {
    width: 5em;
}
details td:first-child {
    width: 7em;
}
details>table+ul {
    margin-top: 5px;
}
li>details>summary {
    padding: 2px 0px 5px 0px;
}
li>details[open]>summary {
    padding-bottom: 10px;
}
li:not(:last-child)>ul {
    padding-bottom: 4px;
}
em {
    font-style: normal;
    color: var(--mdc-theme-secondary);
}
a[target="_blank"]::after {
    content: 'open_in_new';
    font-family: "Material Icons Outlined";
    font-size: smaller;
}
table.quiz {
    border-collapse: collapse;
    border: none;
}
table.quiz :where(td, th) {
    border: 0.5px solid #777;
}
table.quiz th:first-child {
    width: 25em;
}
table.quiz th:nth-child(2) {
    width: 6em;
}
table.quiz td:nth-child(3) {
    text-align: center;
    width: 5em;
}
table.quiz img:not(.question_image) {
    width: 4em;
    vertical-align: middle;
}
table.quiz img.question_image {
    max-width: 100%;
}
table.battle_puzzle {
    border: none;
    border-collapse: collapse;
    table-layout: fixed;
    text-align: center;
    pointer-events: none;
    user-select: none;
}
table.battle_puzzle td {
    position: relative;
    height: auto;
    width: auto;
    padding: 0;
    line-height: 0;
}
table.battle_puzzle img {
    --puzzle-size: 60px;
    width: var(--puzzle-size);
    height: var(--puzzle-size);
}
table.battle_puzzle :is(tr:first-child>td:first-child, tr:last-child>td:last-child) {
    /* mspaint bucket chk */
    background-color: rgba(255, 0, 255, 0.01);
}
.annotation-img img {
    width: 2em;
    padding: 0 .2em;
    vertical-align: bottom;
}
div.mdc-tooltip * {
    user-select: none;
}
span.title0 {
    color: #b00020;
    font-weight: bold;
}
span.title1 {
    color: var(--mdc-theme-secondary);
}

div#loading_dialog, div#loading_dialog * {
    box-sizing: border-box;
}
div#loading_dialog {
    z-index: 7;
    display: flex;
    justify-content: center;
    align-items: center;
}
div#loading_dialog .dialog-scrim {
    z-index: -1;
    background-color: rgba(0, 0, 0, 0.32);
}
div#loading_dialog, div#loading_dialog .dialog-scrim {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
}
div#loading_dialog .dialog-container {
    height: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
}
div#loading_dialog .dialog-text {
    min-width: 280px;
    max-width: 560px;
    max-height: calc(100% - 32px);
    background-color: white;
    border-radius: 4px;
    box-shadow: 0 11px 15px -7px rgb(0, 0, 0, 0.2), 0 24px 38px 3px rgb(0, 0, 0, 0.14), 0 9px 46px 8px rgb(0, 0, 0, 0.12);
    margin: 0;
    padding: 20px 24px;
    font-family: var(--mdc-typography-font-family, Roboto, sans-serif);
    font-size: 1rem;
    line-height: 1.5rem;
    user-select: none;
}

label#filter_input *, div#filter_preset *, span#last_update_version, span#last_update_dv, span#last_update_time, td.mdc-data-table__cell:first-child {
    font-family: Rubik, var(--mdc-typography-font-family, Roboto, sans-serif);
}
code {
    font-family: Rubik, monospace;
}
span.mdc-floating-label, span.mdc-list-item__text {
    user-select: none;
}

